# losttrackr

./: .gitignore  LICENSE  LostTrackr.spec  OUVRIR_LOSTTRACKR_MACOS_BETA.txt  README.md  README_BETA_LOSTTRACKR_MACOS.md  RELEASE_NOTES_v1.0.1_MACOS.md  RELEASE_NOTES_v1.1.0_MACOS.md  RELEASE_NOTES_v1.1.1_MACOS.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.1.2_MACOS.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.0_MACOS.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.1_MACOS.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.2_MACOS.md  RELEASE_NOTES_v1.2.3.md  RELEASE_NOTES_v1.2.3_MACOS.md  RELEASE_NOTES_v1.2.4.md  RELEASE_NOTES_v1.2.4_MACOS.md  RELEASE_NOTES_v1.2.5.md  RELEASE_NOTES_v1.2.5_MACOS.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.0_MACOS.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.1_MACOS.md  RELEASE_NOTES_v1.3.5.md  RELEASE_NOTES_v1.3.5_MACOS.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.0_MACOS.md  SHA256SUMS.txt  build_dmg_macos.sh  build_losttrackr_macos_app.sh  build_pkg_macos.sh  dj_set.py  dj_software.py  knowledge_client.py  losttrackr_app.py  losttrackr_platform.py  (+12 more)
Charte Graphique/: LostTrackr_Design_System.docx  LostTrackr_Design_System.html
assets/: LostTrackr.icns
css/: app.css
js/: app.js
packaging/: dmg_layout.applescript
providers/: __init__.py  base_provider.py  mock_streaming_provider.py
tests/: test_dj_set.py  test_dj_software.py  test_launch_state.py  test_losttrackr_platform.py  test_metadata_resolution.py  test_smart_import.py  test_update_manager.py
tools/: create_update_manifest.py  download_fpcalc.py  (+2 more)
(+32 files in other folders)
